--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
                      src="./images/image(9).png"
                      />
                </div>
-               <li class="maincard__list">
+               <div class="maincard__list">
                   <p>
                      Это было самое начало пути. На этом этапе важно было проникнуться
                      основами и настроиться на учёбу. И, возможно, подумать, как новые
                      знания могут повлиять на ваше будущее.
                   </p>
                   <p>Вау! Что-то удивительно новое!</p>
-               </li>
+                </div>
             </div>
             <div class="like__button-block">
                <button type="button" class="card__icon-button">
